Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-7381

[C++][Packaging] Iterator change broke manylinux1 wheels

    XMLWordPrintableJSON

Details

    Description

      [171/235] Building CXX object src/arrow/dataset/CMakeFiles/arrow_dataset_objlib.dir/scanner.cc.o
      FAILED: src/arrow/dataset/CMakeFiles/arrow_dataset_objlib.dir/scanner.cc.o 
      /usr/bin/ccache /opt/rh/devtoolset-2/root/usr/bin/c++  -DARROW_DS_EXPORTING -DARROW_JEMALLOC -DARROW_JEMALLOC_INCLUDE_DIR="" -DARROW_USE_SIMD -DARROW_WITH_BOOST_FILESYSTEM -DARROW_WITH_BROTLI -DARROW_WITH_BZ2 -DARROW_WITH_LZ4 -DARROW_WITH_SNAPPY -DARROW_WITH_ZLIB -DARROW_WITH_ZSTD -DURI_STATIC_BUILD -Isrc -I/arrow/cpp/src -I/arrow/cpp/src/generated -I/arrow/cpp/src/parquet -isystem /arrow/cpp/thirdparty/flatbuffers/include -isystem /arrow_boost_dist/include -isystem jemalloc_ep-prefix/src -isystem /usr/local/include -isystem /arrow/cpp/thirdparty/hadoop/include -O3 -DNDEBUG  -Wall -Wno-attributes -msse4.2  -O3 -DNDEBUG -fPIC   -std=gnu++11 -MD -MT src/arrow/dataset/CMakeFiles/arrow_dataset_objlib.dir/scanner.cc.o -MF src/arrow/dataset/CMakeFiles/arrow_dataset_objlib.dir/scanner.cc.o.d -o src/arrow/dataset/CMakeFiles/arrow_dataset_objlib.dir/scanner.cc.o -c /arrow/cpp/src/arrow/dataset/scanner.cc
      In file included from /arrow/cpp/src/arrow/dataset/dataset_internal.h:30:0,
                       from /arrow/cpp/src/arrow/dataset/scanner.cc:25:
      /arrow/cpp/src/arrow/util/iterator.h: In instantiation of ‘arrow::Iterator<T>::RangeIterator arrow::Iterator<T>::end() [with T = std::shared_ptr<arrow::RecordBatch>]’:
      /arrow/cpp/src/arrow/dataset/scanner.cc:173:29:   required from here
      /arrow/cpp/src/arrow/util/iterator.h:113:5: error: conversion from ‘std::shared_ptr<arrow::RecordBatch>’ to non-scalar type ‘arrow::Result<std::shared_ptr<arrow::RecordBatch> >’ requested
           RangeIterator() = default;
           ^
      /arrow/cpp/src/arrow/util/iterator.h:147:46: note: synthesized method ‘arrow::Iterator<T>::RangeIterator::RangeIterator() [with T = std::shared_ptr<arrow::RecordBatch>]’ first required here 
         RangeIterator end() { return RangeIterator(); }
                                                    ^
      /arrow/cpp/src/arrow/util/iterator.h: In instantiation of ‘arrow::Iterator<T>::RangeIterator arrow::Iterator<T>::end() [with T = std::shared_ptr<arrow::dataset::ScanTask>]’:
      /arrow/cpp/src/arrow/dataset/scanner.cc:190:31:   required from here
      /arrow/cpp/src/arrow/util/iterator.h:113:5: error: conversion from ‘std::shared_ptr<arrow::dataset::ScanTask>’ to non-scalar type ‘arrow::Result<std::shared_ptr<arrow::dataset::ScanTask> >’ requested
           RangeIterator() = default;
           ^
      /arrow/cpp/src/arrow/util/iterator.h:147:46: note: synthesized method ‘arrow::Iterator<T>::RangeIterator::RangeIterator() [with T = std::shared_ptr<arrow::dataset::ScanTask>]’ first required here 
         RangeIterator end() { return RangeIterator(); }
                                                    ^
      

      Attachments

        Issue Links

          Activity

            People

              bkietz Ben Kietzman
              npr Neal Richardson
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 50m
                  1h 50m