ARROW-7381: [C++] Unbreak manylinux1 wheels after Iterator refactor